<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--female: u:jdk1234@yahoo.com p:dec021982-->
    <!--male: u:two@gmail.com p:test-->
    <!--male: u:abcdef621@yahoo.com p:dec021982-->

    <!--
    Matches
    0 = no match
    1 = 100% match
    2 = < 50% match
    -->
    <string name="api">http://www.asianfinder.com/actions/mobilecom.php</string>
    <string name="asian_frinder_url">http://www.asianfinder.com</string>
    <string name="api_photos">http://www.asianfinder.com</string>
    <string name="api_stickers">http://asianfinder.com/assets/attachments/stickers</string>
    <string name="app_name">Asian Finder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lblName">Name</string>
    <string name="lblGender">Gender</string>
    <string name="lblBirthday">Birthday</string>
    <string name="lblCountry">Country</string>
    <string name="lblState">State</string>
    <string name="lblCity">City</string>
    <string name="lblEmail">Email</string>
    <string name="lblPassword">Password</string>
    <string name="lblContinue">Continue</string>
    <string name="lblUsername">Username</string>
    <string name="lblLogin">Login</string>
    <string name="lblForgotPassword">Forgot Password?</string>
    <string name="lblRegisterNewAccount">Register new account.</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_dashboard_activity_fragment">DashboardActivityFragment</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_help">Help</string>
    <string name="action_filter">Filter</string>
    <string name="action_search">Search</string>

    <string name="sample_quotes">\"Beauty is in the eye of BEER holder.\"</string>

    <string name="lblDone">Done</string>

    <string-array name="drawer_menu">
        <item>PROFILE</item>
        <item>HOME</item>
        <item>MY LIST</item>
        <!--<item>MAIL</item>-->
        <item>MESSAGES</item>
        <!--<item>NOTIFICATIONS</item>-->
        <item>SETTINGS</item>
    </string-array>

    <string name="lblSearch">Search</string>
    <string name="lblAdvanceSearch">Show Advance Search</string>
    <string name="lblSearchDisplayName">Display Name</string>
    <string name="lblSearchGender">Gender</string>
    <string name="lblSearchAge">Age Range</string>
    <string name="lblSearchLocation">Location</string>
    <string name="lblSearchLocationCountry">Country</string>
    <string name="lblSearchLocationState">State</string>
    <string name="lblSearchLocationCity">City</string>


</resources>
